# calview

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CROSS_COMPILE.md  LICENSE.md  PLAN.md  index.html  opencode.json  package-lock.json  package.json  pom.xml  vite.config.ts
.github/workflows/: ci.yml
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: app.tsx  main.tsx
app/src-tauri/: tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
app/src/components/: notifications.tsx  schedule-grid.tsx  toolbar.tsx  user-search.tsx
app/src/model/: schedule.ts  types.ts
app/src/services/: caldav-client.ts  ical-parser.ts
app/src/state/: app-state.ts
app/src/styles/: index.css
plugins/: vite-plugin-licenses.ts
src/: app.tsx  main.tsx  virtual-licenses.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: create-appointment.ps1
src-tauri/src/: lib.rs
src/components/: about-dialog.tsx  calendar-view.tsx  favorites-list.tsx  help-dialog.tsx  login-dialog.tsx  notifications.tsx  outlook-mock-dialog.tsx  schedule-grid.tsx  toolbar.tsx  user-search.tsx  view-switcher.tsx  week-navigator.tsx
src/main/java/de/bycsitsm/: Application.java
src/main/resources/: application.properties
src/model/: schedule.test.ts  schedule.ts  types.ts
src/services/: caldav-client.test.ts  caldav-client.ts  credential-store.ts  favorites-store.ts  http.ts  ical-parser.ts  outlook.ts
src/state/: app-state.ts
src/styles/: calendar.css  index.css  schedule.css
(+20 files in other folders)
