[package]
name = "calview"
version = "1.0.0"
edition = "2021"

[lib]
name = "calview_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = { version = "2", features = ["dangerous-settings"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
